# OrderbookWatcher

./: Cargo.toml  README.md  build.rs
src/proto/: orderbook.proto
utils/: binance_symbols.txt  dump_symbols.py
