[package]
name = "ob_combiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version="0.17.2", features = ["rustls-tls-webpki-roots"]}
url = "2.1.0"
tokio-tungstenite = { version="0.17.1" }
tokio = { version = "1", features = ["full", "macros"] }
tonic = "0.7.2"
tokio-stream = "0.1"


[build-dependencies]
tonic-build = "0.7.2"